--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                     и описали некоторые интересные места, достойные вашего отпуска.
                 </p>
                 <ul class="intro__list">
-                    <li>Часовых поясов <span class="intro__list_span">11</span></li>
-                    <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_span">12</span></li>
-                    <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_span">16</span></li>
-                    <li>Природных заповедников <span class="intro__list_span">105</span></li>
-                    <li>Аэропортов <span class="intro__list_span">241</span></li>
+                    <li>Часовых поясов <span class="intro__list-span">11</span></li>
+                    <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-span">12</span></li>
+                    <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-span">16</span></li>
+                    <li>Природных заповедников <span class="intro__list-span">105</span></li>
+                    <li>Аэропортов <span class="intro__list-span">241</span></li>
                 </ul>     
             </section>
             
@@ -66,8 +66,8 @@
                     </div>
                     <div class="place__column">
                         <div class="place__website">
-                            <p class="place__website__url-heading">URL</p>
-                            <a class="place__website__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+                            <p class="place__website-url-heading">URL</p>
+                            <a class="place__website-link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                         </div>
                         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — 
                             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная 
@@ -85,8 +85,8 @@
                     </div>
                     <div class="place__column">
                         <div class="place__website">
-                            <p class="place__website__url-heading">URL</p>
-                            <a class="place__website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+                            <p class="place__website-url-heading">URL</p>
+                            <a class="place__website-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
                         </div>
                         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -103,8 +103,8 @@
                     </div>
                     <div class="place__column">
                         <div class="place__website">
-                            <p class="place__website__url-heading">URL</p>
-                            <a class="place__website__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+                            <p class="place__website-url-heading">URL</p>
+                            <a class="place__website-link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                         </div>
                         <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. 
                             А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -120,8 +120,8 @@
                     </div>
                     <div class="place__column">
                         <div class="place__website">
-                            <p class="place__website__url-heading">URL</p>
-                            <a class="place__website__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+                            <p class="place__website-url-heading">URL</p>
+                            <a class="place__website-link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                         </div>
                         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой 
                             источник пресной воды и одно из красивейших мест в России.</p>
@@ -137,8 +137,8 @@
                     </div>
                     <div class="place__column">
                         <div class="place__website">
-                            <p class="place__website__url-heading">URL</p>
-                            <a class="place__website__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+                            <p class="place__website-url-heading">URL</p>
+                            <a class="place__website-link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                         </div>
                         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                             В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
